# Scentrix

./: .coderabbit.yaml  .coverage  .dockerignore  .env  .env.example  .gitignore  CLOUD_DB_SETUP.md  COVERAGE_ANALYSIS_SUMMARY.md  DATA_FLOW_ANALYSIS_REPORT.md  DEBUGGING_GUIDE.md  Dockerfile  FINAL_FIX_SUMMARY.md  GSD_VALIDATION_REPORT_PHASES_0-5.6.md  LIGHTHOUSE_BASELINE_SUMMARY.md  LOCAL_TESTING_CHECKLIST.md  Makefile  NAVIGATION_GUIDE.md  PATH_A_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_5.7_COMPLETE.md  PHASE_5.7_COMPLETION_REPORT.md  PHASE_5.7_EXECUTION_PLAN.md  PHASE_5.7_EXECUTION_SUMMARY.md  PHASE_5_FINAL_SUMMARY.md  PHASE_5_MISSION_CONTROL.md  PHASE_5_PROGRESS.md  PHASE_6_DEPLOYMENT_GUIDE.md  PHASE_6_QUICK_CHECKLIST.md  PHASE_6_SETUP_COMPLETE.md  PHASE_6_START_HERE.md  PROGRESS_CHECKPOINT.md  QUICK_START_LOCAL.md  RALPH_LOOP_EXECUTION_GUIDE.md  RALPH_LOOP_PHASE_5.7_CHECKLIST.md  README.md  README_PHASE_6.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  TASK_5.7.1_PROGRESS.md  WCAG_2.1_AA_AUDIT.md  (+11 more)
.github/workflows/: backend-test.yml  coderabbit.yml  deploy-production.yml  frontend-build.yml
backend/: .env.cloud.template  Dockerfile  Procfile  mypy.ini  pyproject.toml  railway.toml  ruff.toml
backend/app/: __init__.py  celery_app.py  config.py  main.py  sentry_config.py
backend/app/auth/: __init__.py  auth.py  dependencies.py
backend/app/migrations/versions/: 001_initial_setup.py
backend/app/models/: models.py
backend/app/routers/: fragrances.py
backend/app/schemas/: schemas.py
backend/app/tasks/: __init__.py  recommend_tasks.py
backend/tests/: conftest.py  test_adaptive_quiz.py  test_auth.py  test_celery.py  test_health.py  test_integration.py  test_recommendation_lifecycle.py
docs/: CODERABBIT_SETUP.md  PHASE_0_COMPLETION.md  celery-async-tasks.md  data-flow-analysis.md  design-system.md  graph-schema.md  gsd-validation.md  local-testing-checklist.md  quick-start-local.md
frontend/: .prettierignore  DESIGN_SYSTEM_ENHANCEMENT.md  Dockerfile  cleanup.ps1  middleware.ts  package.json  playwright.config.ts  start-dev.bat  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/playwright-report/: index.html
frontend/src/app/: globals.css
frontend/src/app/auth/: auth.css
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/families/: families.css  page.tsx
frontend/src/app/families/[family]/: family.css  page.tsx
frontend/src/app/fragrances/: page.tsx
frontend/src/app/fragrances/[id]/: page.tsx
frontend/src/app/onboarding/quiz/: page.tsx  quiz.css
frontend/src/app/profile/: page.tsx  profile.css
frontend/src/app/profile/history/: history.css  page.tsx
frontend/src/app/profile/wishlist/: page.tsx  wishlist.css
frontend/src/components/: BackgroundAnimation.tsx  ClickSprayEffect.tsx  FinalCTA.tsx  FlashcardQuiz.tsx  FragranceFamilies.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  ProductGrid.tsx  Providers.tsx  SocialProof.tsx  StandardQuiz.tsx  navbar.css
frontend/src/lib/: api.ts  hooks.ts  mockData.ts  quizTheme.ts
frontend/src/stores/: app-store.ts
frontend/src/styles/: hero.css
frontend/test-results/: .last-run.json
frontend/test-results/visual-regression-Visual-R-7e306-c-Home-Page---Mobile-375px--chromium/: error-context.md
frontend/test-results/visual-regression-Visual-R-c6507-Home-Page---Desktop-1280px--chromium/: error-context.md
frontend/tests/: visual-regression.spec.ts
frontend/tests/e2e/: api-integration.spec.ts  authenticated-flows.spec.ts  main-flows.spec.ts
ml/data/: __init__.py  seed_fragrances.json
ml/flows/: PREFECT_WORKFLOW.md  __init__.py  weekly_refresh.py
ml/graph/: __init__.py  neo4j_client.py  schema_init.cypher
ml/pipeline/: __init__.py  clean.py  ingest.py
ml/tests/: __init__.py  test_graph.py
